--- a/public/index.html
+++ b/public/index.html
@@ -17,39 +17,39 @@
     />
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="S0umyajit | Portfolio" />
+    <meta itemprop="name" content="Maulik Chopra's Software Portfolio" />
     <meta
       itemprop="description"
-      content="Self Developed personal website build with React.js"
+      content="Hi! I'm Maulik Chopra | Fullstack web developer | Robotics Enthusiast"
     />
     <meta
       itemprop="image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
+      content="https://raw.githubusercontent.com/MaulikChopra/maulikchopra.github.io/792cabe07f5b4d6440425113f863d1e9ffd335c4/src/Assets/Maulik%20Chopra.svg"
     />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://soumyajit.vercel.app" />
+    <meta property="og:url" content="https://maulikchopra.github.io" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="S0umyajit | Portfolio" />
+    <meta property="og:title" content="Maulik Chopra's Software Portfolio" />
     <meta
       property="og:description"
-      content="Self Developed personal website build with React.js"
+      content="Hi! I'm Maulik Chopra | Fullstack web developer | Robotics Enthusiast"
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
+      content="https://raw.githubusercontent.com/MaulikChopra/maulikchopra.github.io/792cabe07f5b4d6440425113f863d1e9ffd335c4/src/Assets/Maulik%20Chopra.svg"
     />
 
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="S0umyajit | Portfolio" />
+    <meta name="twitter:card" content="Maulik's Portfolio" />
+    <meta name="twitter:title" content="Maulik Chopra's Software Portfolio" />
     <meta
       name="twitter:description"
-      content="Self Developed personal website build with React.js"
+      content="Hi! I'm Maulik Chopra | Fullstack web developer | Robotics Enthusiast"
     />
     <meta
       name="twitter:image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
+      content="https://raw.githubusercontent.com/MaulikChopra/maulikchopra.github.io/792cabe07f5b4d6440425113f863d1e9ffd335c4/src/Assets/Maulik%20Chopra.svg"
     />
   </head>
 
