--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,7 @@
       itemprop="description"
       content="Hi! I'm Maulik Chopra | Fullstack web developer | Robotics Enthusiast"
     />
-    <meta
-      itemprop="image"
-      content="https://raw.githubusercontent.com/MaulikChopra/maulikchopra.github.io/792cabe07f5b4d6440425113f863d1e9ffd335c4/src/Assets/Maulik%20Chopra.svg"
-    />
+    <meta itemprop="image" content="%PUBLIC_URL%/maulikportfolio.png" />
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://maulikchopra.github.io" />
@@ -35,10 +32,7 @@
       property="og:description"
       content="Hi! I'm Maulik Chopra | Fullstack web developer | Robotics Enthusiast"
     />
-    <meta
-      property="og:image"
-      content="https://raw.githubusercontent.com/MaulikChopra/maulikchopra.github.io/792cabe07f5b4d6440425113f863d1e9ffd335c4/src/Assets/Maulik%20Chopra.svg"
-    />
+    <meta property="og:image" content="%PUBLIC_URL%/maulikportfolio.png" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="Maulik's Portfolio" />
@@ -47,10 +41,7 @@
       name="twitter:description"
       content="Hi! I'm Maulik Chopra | Fullstack web developer | Robotics Enthusiast"
     />
-    <meta
-      name="twitter:image"
-      content="https://raw.githubusercontent.com/MaulikChopra/maulikchopra.github.io/792cabe07f5b4d6440425113f863d1e9ffd335c4/src/Assets/Maulik%20Chopra.svg"
-    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/maulikportfolio.png" />
   </head>
 
   <body>
