--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,13 @@
       content="Hi! I'm Maulik Chopra | Fullstack web developer | Robotics Enthusiast"
     />
     <meta name="twitter:image" content="%PUBLIC_URL%/maulikportfolio.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
