--- a/public/index.html
+++ b/public/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon2.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-maulik-image.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Fullstack web & Mobile developer | Frontend Engineer | Python developer"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Maulik's Portfolio</title>
+    <title>Maulik Chopra's Portfolio</title>
     <meta
       name="description"
-      content="Self Developed personal website build with React.js"
+      content="Fullstack web & Mobile developer | Frontend Engineer | Python developer"
     />
 
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Maulik Chopra's Software Portfolio" />
     <meta
       itemprop="description"
-      content="Hi! I'm Maulik Chopra | Fullstack web developer | Robotics Enthusiast"
+      content="Fullstack web & Mobile developer | Frontend Engineer | Python developer"
     />
-    <meta itemprop="image" content="%PUBLIC_URL%/maulikportfolio.png" />
+    <meta itemprop="image" content="%PUBLIC_URL%/maulikpic22.jpeg" />
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://maulikchopra.github.io" />
@@ -30,18 +30,18 @@
     <meta property="og:title" content="Maulik Chopra's Software Portfolio" />
     <meta
       property="og:description"
-      content="Hi! I'm Maulik Chopra | Fullstack web developer | Robotics Enthusiast"
+      content="Fullstack web & Mobile developer | Frontend Engineer | Python developer"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/maulikportfolio.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/maulikpic22.jpeg" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="Maulik's Portfolio" />
     <meta name="twitter:title" content="Maulik Chopra's Software Portfolio" />
     <meta
       name="twitter:description"
-      content="Hi! I'm Maulik Chopra | Fullstack web developer | Robotics Enthusiast"
+      content="Fullstack web & Mobile developer | Frontend Engineer | Python developer"
     />
-    <meta name="twitter:image" content="%PUBLIC_URL%/maulikportfolio.png" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/maulikpic22.jpeg" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
